// Copyright 2020 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package tast.cros.policy;

import "google/protobuf/empty.proto";

option go_package = "chromiumos/tast/services/cros/policy";

// ClientCertificateService provides a function to check if the client certificate was installed.
service ClientCertificateService {
  rpc TestClientCertificateIsInstalled(google.protobuf.Empty) returns (google.protobuf.Empty) {}
}